ポートフォリオ頑張った

--- a/ジャンケン/index.html
+++ b/ジャンケン/index.html
@@ -4,38 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="stylesheet" href="style.css" />
-    <title>My Portfolio</title>
+    <title>Document</title>
   </head>
   <body>
-    <header>
-      <p class="title">浦部蒼太の誕生日をお祝いしてくだい!!</p>
-      <div class="point-box">
-        <div class="point-titele">
-          <p>あなたの所持ポイント</p>
-          <p><span id="point"></span>pt</p>
-        </div>
-      </div>
-    </header>
-
-    <div class="your-year-container">
-      あなたの年齢を選択してください
-      <input type="number" id="your-year" min="6" max="99" />
-      <button id="year-button">決定</button>
-    </div>
-
-    <div class="countdown">
-      <h1>私の誕生日　5月21日まで</h1>
-      <p>あと <span class="timer" id="timer"></span></p>
-    </div>
-
-    <div class="pointup-container">
-      <div class="omikuzi-container"></div>
-      <div class="zyanken-container">
-          <h3>ジャンケン</h3>
-      　<hr>
-      　<table border="0" align="center">
+      <h3>ジャンケン</h3>
+      <hr>
+      <table border="0" align="center">
           <tr>
               <th width="200" height="200"><div id="ahand"></div></th>
               <th>VS</th>
@@ -73,9 +48,9 @@
           </tr>
       </table>
 
+      <div>あなたの所持金は<br><span id="point"></span>円です
       </div>
-    
-    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
