ポートフォリオ完成

--- a/ジャンケン/index.html
+++ b/ジャンケン/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
       <h3>ジャンケン</h3>
+      <button id="start-button">ゲームを始める</button>
+      <button id="finish-button">ゲームをやめる</button>
       <hr>
       <table border="0" align="center">
           <tr>
